# Zigbee-Control-Center

./: .$Zigbee_Diagram_and_Docs.drawio.bkp  PPP (conflicted copy 2026-02-02 102325).md  PPP.html  PPP.md  PPP_test.html  PPP_test.md  README.md  S1P.md  Zigbee_Diagram_and_Docs.drawio  structure.txt
Raspberry_pi/: gui.py  main.py  notes.py  temp_humid.py
Raspberry_pi/gui/: TODO.txt  device_list.py  environment (conflicted copy 2026-02-02 121842).py  environment.py  gui.py  main (conflicted copy 2026-02-02 113605).py  main.py  main_window.py  top_layer_buttons.py
Raspberry_pi/gui/Functionality/: temp_humid_monitor.py
Raspberry_pi/gui/dialogs/: logs_dialog.py  settings_dialog.py
Raspberry_pi_CC/: TODO.txt  final.md  main.py  temp_humid.py  todo.sh
Raspberry_pi_CC/core/: device_manager.py  zigbee_gateway.py
Raspberry_pi_CC/gui/: TODO.txt  main_window.py  top_layer_buttons.py
Raspberry_pi_CC/gui/Functionality/: temp_humid_monitor.py
Raspberry_pi_CC/gui/dialogs/: configure_gateway.py  pair_devices_dialog.py
Raspberry_pi_CC/gui/widgets/: device_panel.py  environment_panel.py  network_status.py
Raspberry_pi_CC/sensors/: dht22.py  ld2410c.py  sht41.py  sht41_No_PI.py
Raspberry_pi_CC/tests/: dht22_tester.py
esp_zigbee_gateway/: sdkconfig
esp_zigbee_gateway/main/: CMakeLists.txt  esp_zigbee_gateway.c  esp_zigbee_gateway.h  pi_commands.c  pi_commands.h  serial_protocol.c  serial_protocol.h  serial_reader.c  serial_reader.h  zcl_handler.c  zcl_handler.h  zdo_discovery.c  zdo_discovery.h
